@@ -30,6 +30,7 @@ Version 1.5.0+svn:
    * Implemented the option to use the mouse selection clipboard in X11
      the new widget library also uses it.
    * added restart command to server that does gracefull restart
+   * added option to do gracefull shut down for server
    * fixed multiplayer_connect to handle leave_game command from server
    * Removed bug introduced in 1.5.0 that allowed use of :debug commands during
      network play
